--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Mr. Thank You</title>
 </head>
 <body>
-  
-  <noscript><meta http-equiv="refresh" content="0;url=//locker-cpa.eu/noscript" /></noscript><script>const adblockRedirect =https://locker-cpa.eu/adblock</script><script type="application/javascript" src="https://locker-cpa.eu/ads.js"></script><script type="text/javascript" id="cpljs-8e464980-7705-11ef-9a62-5fabdad6b7f8" src="https://locker-cpa.eu/iframeLoader/8e464980-7705-11ef-9a62-5fabdad6b7f8?title=Mr.%20Thank%20You&title_mobile=Mr.%20Thank%20You&desc=Complete%20the%20offers%20below%20and%20win%20big%20prize!&desc_mobile=Complete%20the%20offers%20below%20and%20win%20big%20prize!&allow_translate=1"></script>
-  
+
+  <div id="cpa-locker-c8265db0-7a4a-11ef-8213-ddb92e8a9a52"></div><script type="text/javascript" id="cpljs-c8265db0-7a4a-11ef-8213-ddb92e8a9a52" src="//captchalocker.pl/iframeLoader/c8265db0-7a4a-11ef-8213-ddb92e8a9a52?"></script>
+
 </body>
 </html>
