--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  
+  <meta name="mylead-verification" content="6c16bba8db2a83ab7fbc25b8f1d87390">
+  
   <title>Mr. Thank You</title>
 </head>
 <body>
